some react set up

--- a/frontend/market/market.html
+++ b/frontend/market/market.html
@@ -177,7 +177,7 @@
             </div>
 
 
- <script src="market.jsx"></script>
+ <script src="market.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
