fix various shit

--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -12,8 +12,8 @@
         <div class="nav-links">
             <a href="../dashboard/dashboard.html" class="active">Dashboard</a>
             <a href="../market/market.html" class="active">Market</a>
-            <a href="../portfolio/portfolio.html" class="active" style="color: var(--neon-blue);">My Portfolio</a>
-            <a href="../profile/profile.html" class="active">Profile</a>
+            <a href="../portfolio/portfolio.html" class="active">My Portfolio</a>
+            <a href="../profile/profile.html" style="color: var(--neon-blue);" class="active">Profile</a>
         </div>
     </nav>
 
