--- a/frontend/profile/profile.html
+++ b/frontend/profile/profile.html
@@ -19,6 +19,7 @@
 
 
      <script src="profile.js"></script>
+     <script src="../../server.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </body>
