Add axios script tag to html

--- a/frontend/6446660507129/stock.html
+++ b/frontend/6446660507129/stock.html
@@ -52,6 +52,7 @@
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-financial@0.1.0"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script type="module" src="stock.jsx"></script>
       </body>
     </html>
