add more to the stock code

--- a/frontend/6446660507129/stock.html
+++ b/frontend/6446660507129/stock.html
@@ -52,8 +52,20 @@
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-financial@0.1.0"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script type="module" src="stock.jsx"></script>
+
+
+        <div class="gridContainerForTimeFrame">
+        <button class="timeFrame" id="oneMinute">1 minute</button>
+        <button class="timeFrame" id="fiveMinutes">5 minutes</button>
+        <button class="timeFrame" id="twentyMinutes">20 minutes</button>
+        <button class="timeFrame" id="oneHour">1 hour</button>
+        <button class="timeFrame" id="threeHours">3 hours</button>
+        <button class="timeFrame" id="oneDay">1 day</button>
+        <button class="timeFrame" id="oneWeek">1 week</button>
+      </div>
+
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+      <script type="module" src="stock.jsx"></script>
       </body>
     </html>
   </body>
