--- a/frontend/6446660507129/stock.html
+++ b/frontend/6446660507129/stock.html
@@ -65,7 +65,7 @@
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-      <script type="module" src="stock.jsx"></script>
+      <script type="module" src="stock.js"></script>
       </body>
     </html>
   </body>
