add events for buying or selling

--- a/frontend/6446660507129/stock.html
+++ b/frontend/6446660507129/stock.html
@@ -66,6 +66,9 @@
 
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
       <script type="module" src="stock.js"></script>
+      <!--add the part where users make a new trade here, i dont feel like adding react so just make the prompt fade in when clicking
+      the cta to make a trade-->
+      <!--also make sure to add event listeners and send how much the user spent on buying or selling the stock to the existing functions-->
       </body>
     </html>
   </body>
